updates, updates for everyone

--- a/priv/gettext/de/LC_MESSAGES/enum.po
+++ b/priv/gettext/de/LC_MESSAGES/enum.po
@@ -23,6 +23,9 @@ msgstr "BWL"
 msgid "economics"
 msgstr "VWL"
 
+msgid "interdisciplinary_studies"
+msgstr "Interdisziplinäre Studien"
+
 msgid "bachelor"
 msgstr "Bachelor"
 
