--- a/priv/gettext/en/LC_MESSAGES/enum.po
+++ b/priv/gettext/en/LC_MESSAGES/enum.po
@@ -23,6 +23,9 @@ msgstr "Business Economics"
 msgid "economics"
 msgstr "Economics"
 
+msgid "interdisciplinary_studies"
+msgstr "Interdisciplinary Studies"
+
 msgid "bachelor"
 msgstr "Bachelor"
 
